# HaskellAdventOfCode

./: HaskellAdventOfCode.cabal  README.md  hie.yaml
.github/workflows/: haskell.yml
benchmarks/: Benchmarks.hs  Common.hs
src/Aoc2020/: Day8.hs
src/Aoc2021/: Day1.hs  Day2.hs  Day3.hs  Day5.hs
src/Aoc2023/: Day1.hs  Day1_2.hs  Day5.hs
src/Aoc2024/: Day1.hs  Day2.hs  Day2Alt.hs  Day2_Alt.hs  Day4.hs  Day4Alt.hs
test/Spec/: Common.hs
test/Spec/Aoc2020/: Common.hs  Day8Spec.hs
test/Spec/Aoc2021/: Common.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day5Spec.hs
test/Spec/Aoc2023/: Common.hs  Day1Spec.hs  Day1_2Spec.hs  Day5Spec.hs
test/Spec/Aoc2024/: Common.hs  Day1Spec.hs  Day2Spec.hs  Day4Spec.hs
