cabal-version:      3.4
name:               HaskellAdventOfCode
version:            0.1.0.0
author:             xepaul
maintainer:         xepaul@users.noreply.github.com
build-type:         Simple
common deps
  ghc-options:  -Wall                
                -fno-warn-incomplete-uni-patterns
                -Wincomplete-patterns             
                -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wmissing-fields   
                -Wunused-top-binds
                -Wunused-local-binds
                -Wunused-pattern-binds
                -Wunused-matches
                -Wunused-do-bind
                -Wunused-type-patterns
                -Wunused-foralls
                -Wunused-record-wildcards
                -Wredundant-record-wildcards

common base1
  build-depends:      base >=4.17.2.1 

library
    import: base1
    import: deps
    exposed-modules:  
                        Aoc2021.Day1
                      , Aoc2021.Day2
                      , Aoc2021.Day3 
                      , Aoc2021.Day5
                      , Aoc2020.Day8
                      , Aoc2023.Day1
                      , Aoc2023.Day5
                      , Aoc2024.Day1
                      , Aoc2024.Day2
                      , Aoc2024.Day2_Alt
    other-modules:    
    other-extensions:                      
    build-depends:    parsec,
                      parsec-numbers,
                      parser-combinators,
                      lens,
                      text,
                      containers,
                      mtl,
                      extra,
                      transformers,
                      bytestring,
                      ilist

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite HaskellAdventOfCode-test
    import: base1
    import: deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    build-tool-depends:
      tasty-discover:tasty-discover  
    hs-source-dirs:   test
    main-is:          Driver.hs
    other-modules:
                      Spec.Common
                      Spec.Aoc2020.Common
                      Spec.Aoc2020.Day8Spec
                      Spec.Aoc2021.Common
                      Spec.Aoc2021.Day1Spec 
                      Spec.Aoc2021.Day2Spec 
                      Spec.Aoc2021.Day3Spec 
                      Spec.Aoc2021.Day5Spec                      
                      Spec.Aoc2023.Day1Spec    
                      Spec.Aoc2023.Day5Spec    
                      Spec.Aoc2023.Common    
                      Spec.Aoc2024.Day1Spec 
                      Spec.Aoc2024.Day2Spec 
                      Spec.Aoc2024.Common              

    build-depends:    HaskellAdventOfCode
                    , tasty                  
                    , tasty-expected-failure
                    , hedgehog               
                    , tasty-hedgehog    
                    , tasty-quickcheck   
                    , hspec
                    , containers
                    , tasty-hunit
                    , smallcheck       
                    , lens
                    , lens-aeson
                    , containers
                    , extra
                    , parsec
                    , split
                    , QuickCheck
                    , quickcheck-arbitrary-adt
                    , aeson
                    , tasty-th
                    , HUnit
                    , filepath
                    , directory

benchmark year-day-benchmarks
  type:                exitcode-stdio-1.0
  main-is:             Benchmarks.hs
  other-modules:       Common
  hs-source-dirs:      benchmarks
  build-depends:       base
                     , criterion
                     , HaskellAdventOfCode
                     , filepath
                    , directory
  default-language:    Haskell2010